@@ -1,8 +1,9 @@
 tor (0.0.1+0.0.2pre24-1) unstable; urgency=low
 
   * New upstream release.
+  * Do not strip binaries for now.
 
- -- Peter Palfrader <weasel@debian.org>  Wed,  3 Mar 2004 13:29:45 +0100
+ -- Peter Palfrader <weasel@debian.org>  Wed,  3 Mar 2004 13:32:03 +0100
 
 tor (0.0.1+0.0.2pre23-1) unstable; urgency=low
 
